After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751653 - When saving, don't show Recent in the places sidebar
When saving, don't show Recent in the places sidebar
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2015-06-29 14:27 UTC by Allan Day
Modified: 2018-02-09 16:27 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Allan Day 2015-06-29 14:27:01 UTC
When saving, I regularly get confused by the recent view. It's different from the recent view in files and when opening a file, which I am familiar with. This means that I often have a moment of incomprehension when I see it. Also, it's almost impossible to identify any of the folders you see listed there.

The idea of a list of recent directories is inherently confusing. Directories are nested, and you travel through them to get to other directories (typically they are steps in a path, rather than a destination). They don't make sense when seen outside of their tree.

It still isn't clear to me how the order of the folders is determined - it says it is sorted by Modified, but the listed directories haven't been changed themselves. I can only assume that their contents have been modified recently, but what does that mean? Does it mean that any of their child directories have also been modified? Are those children also listed? (These are rhetorical questions - my point is that the logic of the location is ambiguous)

Additionally, directories in the recent view only make sense if recent is sorted by mtime, which means that it is inconsistent with bug 686137 and bug 698365.
Comment 1 Matthias Clasen 2015-07-02 02:18:04 UTC
This is fixed in the wip/matthiasc/filechooser branch
Comment 2 soulsonceonfire 2018-02-06 16:14:27 UTC
I don't understand how removing the feature fixes this 'problem', I think that the recent used list in save dialogs is useful, it prevents traveling the full path to a recently used location.

The list shows the last folders where a file has been saved, not the intermediary folders.

I'm running debian testing (buster) and the recent list has been removed from almost all file save dialogs, the only application I can still get a recent list when saving a file is the screenshot application and it is useful.
Comment 3 Frank Steiner 2018-02-09 16:27:52 UTC
It doesn't fix anything, it just makes one person happy who got "confused" by a feature that many many people are now missing. https://bugzilla.gnome.org/show_bug.cgi?id=781819 isn't the only place where people are complaining about it, just google around to find some more.

Removing a feature because someone doesn't understand how it works is a bad idea, even if it's one of the developers. Make it optional, set its default to "false", and Allan is happy. But all the people who are now badly missing this feature will be happy, too, after setting it to "true" in their config.